--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
-  text-align: center;
+body {
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.mainsection {
+   position: absolute;
+   top:40%;
+   padding: 10px 40px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bcwrapper {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-top:16px;
+  gap: 50px;
+  flex-wrap: wrap;
+}
+h5 {
+  color:#fff;
+  font-weight: 500;
+  font-size: 18px;
+  margin: 0%;
+}
+.btnwrapper {
+  width: 100%;
+  padding-top:32px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  @media (max-width: 600px) {
+  flex-direction: column;
+  }
+}
+.shareWrapper {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+      flex-wrap: wrap;
+}
+.installbtn {
+  padding: 16px 120px;
+  background-color: #6df378;
+  font-size: 18px;
+  font-weight: 700;
+  color: #202124;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.shareOption {
+  color:#6df378;
+  font-size: 16px;
+  margin: 0;
+  font-weight: 400;
+  display: flex;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.trailerbtn {
+  display: flex;
+  align-items: center;
+  background-color:rgba(0, 0, 0, .54);
+  border: 0;
+  border-radius: 56px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: 600;
+  outline: 0;
+  padding: 14px 21px;
+  text-align: center;
+  text-decoration: none;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ 
+}
+.sliderWrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  overflow-x: hidden;
+  @media (max-width: 600px) {
+     flex-direction: column;
+     justify-content: center;
+    }
+}
+.slideImage {
+  height:400px;
+  border-radius: 8px;
+  margin-bottom: 16px;
+  @media (max-width: 600px) {
+      width: 90%;
+      height: auto;
+      margin: 12px auto;
+    }
+}
+.FooterSection {
+  border: #202124 solid 1px;
+  padding: 16px;
+  border-radius: 8px;
+}
+.footerStyle {
+  padding-bottom: 16px;
+  display: flex;
+  align-items: center;
+
 }
