--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,8 @@ h5 {
   color: #202124;
   border-radius: 8px;
   cursor: pointer;
+  @media (max-width: 600px) {
+  padding: 16px 60px;    }
 }
 .shareOption {
   color:#6df378;
