--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,11 @@ body {
   padding-top:16px;
   gap: 50px;
   flex-wrap: wrap;
+  @media (max-width: 600px) {
+      justify-content: center;
+    }
+  
+    ;
 }
 h5 {
   color:#fff;
@@ -27,6 +32,7 @@ h5 {
   justify-content: space-between;
   @media (max-width: 600px) {
   flex-direction: column;
+  align-items: center;
   }
 }
 .shareWrapper {
@@ -34,6 +40,9 @@ h5 {
     align-items: center;
     gap: 30px;
       flex-wrap: wrap;
+      @media (max-width: 600px) {
+          justify-content: center;
+        }
 }
 .installbtn {
   padding: 16px 120px;
@@ -70,8 +79,9 @@ h5 {
   padding: 14px 21px;
   text-align: center;
   text-decoration: none;
-
- 
+    @media (max-width: 600px) {
+        margin-top: 24px;
+      }
 }
 .sliderWrapper {
   display: flex;
