--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,8 @@ h5 {
   color: #202124;
   border-radius: 8px;
   cursor: pointer;
+  border:none;
+  outline: none;
   @media (max-width: 600px) {
   padding: 16px 60px;    }
 }
